<resources>
    <string name="app_name">Cooking Unit Converter</string>
    <string name="unit_value">Unit Value</string>
    <string name="convert_the_value_from">Convert the value from:</string>
    <string name="millileters_to_ounces">MilliLeters to Ounces</string>
    <string name="cups_to_grams">Cups to Grams</string>
    <string name="reverse">Reverse?</string>
    <string name="calculate">Calculate</string>
    <string name="converted_value">Converted Value</string>
</resources>