<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <EditText
        android:id="@+id/unitValue"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/unit_value"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/serviceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unitValue"
        android:text="@string/convert_the_value_from"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="138dp"
        />

    <RadioGroup
        android:id="@+id/option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serviceText"
        android:checkedButton="@id/mm_oz"
        >

        <RadioButton
            android:id="@+id/mm_oz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/millileters_to_ounces" />

        <RadioButton
            android:id="@+id/cups_g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cups_to_grams"/>




    </RadioGroup>

    <TextView
        android:id="@+id/roundUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option"
        android:text="@string/reverse"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="234dp" />

    <Switch
        android:id="@+id/switchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchButton" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textStyle="bold"
        android:text="@string/converted_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton" />
    />

</androidx.constraintlayout.widget.ConstraintLayout>